Changed container names to fix alignment

--- a/cocswitch_app/src/components/NavigationBar.css
+++ b/cocswitch_app/src/components/NavigationBar.css
@@ -19,7 +19,7 @@
     transition: width 0.6s ease;
 }
 
-.container {
+.nav_container {
     top: 30px;
     position: relative;
 }
